# clientmaster-64-bit

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.md
cmake/toolchains/: Windows-MSVC.cmake
docs/: 3dsMax2022Exporter.md  SWGGodClient_Modernization_Plan.md  TerrainEditorAutomation.md  TerrainEditorModernizationPlan.md  TreeFileRspBuilder.md  ai_load_tester.md  swg_creation_tool.md  swg_super_tool.md  swg_tre_gui.md  ui-regression-checklist.md  win32-client-build.md
docs/graphics/: 32bit-tuning.md  PostProcessingConfig.md  direct3d9ex.md  directx10-integration.md  dxvk.md  max-quality-defaults.md
plugin/ai_load_tester/: AiLoadTesterPlugin.cpp  Swg+ai.cfg  plugin.json  scenario.sample.json
plugin/examples/world_builder_procedural/: README.md  WorldBuilderProceduralPlugin.cpp  plugin.json
shader/: post_bloom.sht  post_color_grade.sht  post_depth_of_field.sht  post_ssao.sht  post_taa.sht  post_upscale_reimagined.sht  post_vignette.sht
src/engine/client/application/Direct3d10/src/win32/: Direct3d10.cpp  Direct3d10.h  Direct3d10Bootstrap.cpp  Direct3d10Bootstrap.h  FirstDirect3d10.h
src/engine/client/application/Direct3d9/src/shared/: MemoryManagerHook.cpp
src/engine/client/application/Direct3d9/src/win32/: ConfigDirect3d9.cpp  ConfigDirect3d9.h  Direct3d9.h  Direct3d9_DynamicVertexBufferData.cpp  Direct3d9_Metrics.cpp  Direct3d9_Metrics.h  Direct3d9_RenderTarget.cpp  Direct3d9_StaticIndexBufferData.cpp  Direct3d9_StaticShaderData.cpp  Direct3d9_StaticVertexBufferData.cpp  Direct3d9_TextureData.cpp  Direct3d9_VertexShaderData.cpp
src/engine/client/application/Direct3d9Ex/src/win32/: Direct3d9ExSupport.cpp  Direct3d9ExSupport.h
src/engine/client/application/DllExport/src/win32/: DllExport.cpp
src/engine/client/application/Headless/src/shared/: Headless.cpp
src/engine/client/application/MayaExporter/src/win32/: MayaAnimatingTextureShaderTemplateWriter.cpp  MayaCustomizableShaderTemplateWriter.cpp  MayaShaderReader.cpp  MayaStaticShaderTemplateWriter.cpp  MayaUtility.cpp  MayaUtility.h
src/engine/client/application/TerrainEditor/src/win32/: DialogControlPointEditor.cpp  DialogEditorPreferences.cpp  DialogEditorPreferences.h  DialogMapParameters.cpp  DialogMapParameters.h  EditorTerrain.cpp  FirstTerrainEditor.h  FormLayer.cpp  FormLayer.h  GuidedCreationFrame.cpp  GuidedCreationFrame.h  GuidedCreationView.cpp  GuidedCreationView.h  MainFrame.cpp  MainFrame.h  MapView.cpp  MapViewMode.cpp  NumberEdit.cpp  Resource.h  SmartTerrainAnalyzer.cpp  SmartTerrainAnalyzer.h  TerrainAutoPainter.cpp  TerrainAutoPainter.h  TerrainEditor.rc  TerrainEditorDoc.cpp  TerrainEditorDoc.h  TerrainEditorWinMain.cpp  View3dView.cpp  View3dView.h
src/engine/client/application/TerrainEditor/src/win32/res/: TerrainEditor.exe.manifest
src/engine/client/application/TextureBuilder/src/win32/: DrawTextureCommandElement.cpp
src/engine/client/application/UiBuilder/: FileLocator.cpp  MainFrm.cpp  MainFrm.h  ObjectEditor.cpp  PropertyListControl.cpp  SelectRegionCanvas.cpp  UiBuilder.cpp  UiBuilder.rc
src/engine/client/application/Viewer/src/win32/: ContentCreationAssistantDialog.cpp  ContentCreationAssistantDialog.h  ContentCreationPreset.h  ViewerWinMain.cpp
src/engine/shared/application/DataLintRspBuilder/src/win32/: DataLintRspBuilder.cpp
src/engine/shared/application/TreeFileBuilder/src/shared/: TreeFileBuilder.cpp  TreeFileBuilder.dox  TreeFileBuilder.h
src/engine/shared/application/TreeFileExtractor/src/shared/: TreeFileExtractor.cpp
src/engine/shared/application/TreeFileRspBuilder/src/win32/: FirstTreeFileRspBuilder.h  TreeFileRspBuilder.cpp
src/engine/shared/plugin/: PluginAPI.h
src/game/client/application/SwgAiLoadClient/src/win32/: FirstSwgAiLoadClient.h  WinMain.cpp
src/game/client/application/SwgClient/src/shared/: SwgPlusIntegration.h
src/game/client/application/SwgClient/src/win32/: ClientMain.cpp  SwgClient.rc  SwgPlusIntegration.cpp  WinMain.cpp
src/game/client/application/SwgClientSetup/src/win32/: ClientMachine.cpp  ClientMachine.h  MessageBox2.cpp  Options.cpp  Options.h  PageAdvanced.cpp  PageAdvanced.h  PageGraphics.cpp  PageGraphics.h  PageInformation.cpp  SwgClientSetup.cpp  SwgClientSetup.h  SwgClientSetup.rc  resource.h
src/game/client/application/SwgCsTool/src/win32/: SWGCSTool.sln  UpgradeLog.htm
src/game/client/application/SwgGodClient/src/: ConfigGodClient.cpp  GodClientPerforce.cpp  MainFrame.cpp  main.cpp
src/game/client/application/SwgHeadlessClient/src/win32/: ClientMain.cpp
src/game/server/application/SwgContentBuilder/src/win32/: FirstSwgContentBuilder.h  RecentDirectory.cpp  RecentDirectory.h
src/tools/swg_creation_tool/: CMakeLists.txt  CrcTable.inl  IffBuilder.cpp  IffBuilder.h  Json.cpp  Json.h  main.cpp
src/tools/swg_tre_gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TreArchive.cpp  TreArchive.h  cli.cpp  main.cpp
src/tools/terrain_autopainter_headless/: CMakeLists.txt  main.cpp
tools/: SWG_MSHFullExporter.ms  SWG_MSHImporter.ms  SWG_SuperTool.ms  TreeFileBuilderGui.py  swg-tool.py  swg_max_exporter.ms
tools/shader/: ui_notice.sht
tools/swg-tool/: README.md
tools/swg-tool/examples/: terrain_document.json
tools/swg-tool/swg_tool/: __init__.py  autopainter.py  cli.py  hlsl_upgrade.py  iff.py  loadtest.py  manifest.py  navmesh.py  preflight.py  publisher.py  response.py  rspconfig.py  shader.py  shader_profiles.json  treebuilder.py  treebuilder_internal.py  treefile_gui.py  treefile_ops.py
tools/swg-tool/tests/: test_cli.py  test_hlsl_upgrade.py  test_iff.py  test_loadtest.py  test_response.py  test_rspconfig.py  test_shader.py  test_treebuilder.py
tools/win32/: package-win32-renderers.ps1
